# tejx

./: .gitignore  COMPILER_GUIDE.md  Cargo.toml  README.md  benchmark.cpp  benchmark.js  build.rs  build.sh  novac  runtime.rs  test.sh  test_all.sh  test_file.txt  test_negative.sh  test_problems.sh
docs/: ASYNC.md  COLLECTIONS.md  COMPILER_GUIDE.md  CONCURRENCY.md  FILE_STRUCTURE.md  INTERNALS.md  LANGUAGE.md  MEMORY.md  MEMORY_MODEL.md  MODULE_SYSTEM.md  NEW_MEMORY.md  OWNERSHIP.md  README.md  THREADING.md  TYPE_SYSTEM.md  event_loop_async.md  garbage_collection.md
examples/: advanced.tx  arrays.tx  arrays_extra.tx  async.tx  classes.tx  concurrency.tx  console_math.tx  const.tx  control.tx  date.tx  defaults.tx  destructuring.tx  enums.tx  exports.tx  extensions.tx  features_arrays.tx  features_declarations.tx  features_error_handling.tx  features_modules.tx  features_oop.tx  features_stdlib.tx  features_types.tx  files.tx  for_of.tx  fs_test.tx  getters_setters.tx  hello.tx  imports.tx  imports_test.tx  json_globals.tx  lambdas.tx  logic.tx  map_set.tx  match.tx  math.tx  modern.tx  modern_features.tx  nested.tx  object_spread.tx  objects.tx  (+14 more)
src/: ast.rs  ast_transformer.rs  borrow_checker.rs  builtins.rs  codegen.rs  diagnostics.rs  hir.rs  intrinsics.rs  lexer.rs  linker.rs  lowering.rs  main.cpp  main.rs  mir.rs  mir_lowering.rs  mir_opt.rs  parser.rs  runtime.rs  token.rs  type_checker.rs  types.rs
src/runtime/: Cargo.toml  event_loop.rs  gc.rs  mod.rs
src/runtime/core/: array.rs  atomic.rs  binary.rs  condition.rs  crypto.rs  internal_http.rs  lib.rs  math.rs  mutex.rs  net.rs  object.rs  promise.rs  queue.rs  string.rs  thread.rs
stdlib/: collections.tx  fs.tx  json.tx  math.tx  net.tx  object.tx  prelude.tx  system.tx  thread.tx  time.tx
tejx-runtime/: Cargo.toml
tejxcpp/: CMakeLists.txt
test_modules/: default_test.tx  export_default.tx  main.tx  main_fail.tx  oop_advanced.tx  types_test.tx
tests/: async_demo.tx  async_disabled.tx  async_scenarios.tx  async_test.tx  debug_math.tx  features_arrays.tx  features_arrays_debug.tx  features_async.tx  features_collections.tx  features_collections_advanced.tx  features_concurrency.tx  (+37 more)
wasm/: Cargo.toml  README.md  build.rs
wasm/src/: lib.rs  runtime.rs  wasm_codegen.rs
(+389 files in other folders)
