[workspace]
members = [
    "src/runtime"
]

[package]
name = "tejxc"
version = "1.0.3"
edition = "2021"

[[bin]]
name = "tejxc"
path = "src/compiler/main.rs"

[dependencies]
colored = "3.1.1"
tokio = { version = "1.50.0", features = ["rt", "time", "net", "macros", "sync"] }
wat = "1.222.0"
tejx-rt = { path = "src/runtime" }

[build-dependencies]
cc = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(runtime_build)'] }
