[workspace]

[package]
name = "tejxc-wasm"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wat = "1.222.0"
wasm-encoder = "0.245.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(runtime_build)'] }
