[package]
name = "tejx-rt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "core/lib.rs"

[dependencies]
hmac = "0.12.1"
libc = "0.2.183"
native-tls = "0.2.18"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "time", "net", "macros", "sync"] }
